Bucket - - Fix alignment of Tag inside card - Bug of Carla

--- a/packages/ui/src/6-components/_bucket.scss
+++ b/packages/ui/src/6-components/_bucket.scss
@@ -13,6 +13,6 @@
   .eyebrow-heading-3  { grid-area:small-header; color:hsl(var(--small-title-color)); align-self:center; margin-block-end:pxToRem(8); }
   .bucket-status      { grid-area:status; }
   .heading-level-6    { grid-area:big-header; }
-  .bucket-options     { grid-area:options; display:flex; gap:pxToRem(16); justify-self:start; margin-block-start:pxToRem(96); }
+  .bucket-options     { grid-area:options; display:flex; gap:pxToRem(16); align-self:end; justify-self:start; margin-block-start:pxToRem(96); }
   .bucket-icons       { grid-area:icon-info; justify-content:end; margin-block-start:pxToRem(96);  }
 }
